--- a/frontdev/learn-vue/01.vue的基本代码/8.v-for中key的使用.html
+++ b/frontdev/learn-vue/01.vue的基本代码/8.v-for中key的使用.html
@@ -20,7 +20,7 @@
     </div>
 </body>
 <script>
-     var vm = new Vue({
+     let vm = new Vue({
         el: '#app',
         data: {
             id:null,
