--- a/frontdev/learn-vue/01.vue的基本代码/V-model.html
+++ b/frontdev/learn-vue/01.vue的基本代码/V-model.html
@@ -14,7 +14,7 @@
     </div>
 </body>
 <script>
-     var vm = new Vue({
+     let vm = new Vue({
         el: '#app',
         data: {
             msg:'我爱学习，我爱思考'
