--- a/frontdev/learn-vue/01.vue的基本代码/basecode.html
+++ b/frontdev/learn-vue/01.vue的基本代码/basecode.html
@@ -13,7 +13,7 @@
     </div>
 </body>
 <script>
-    var vm = new Vue({
+    let vm = new Vue({
         el: '#app',
         data: {
             msg: '欢迎学习vue'
