--- a/frontdev/learn-vue/01.vue的基本代码/v-cloak.html
+++ b/frontdev/learn-vue/01.vue的基本代码/v-cloak.html
@@ -22,7 +22,7 @@
 </body>
 <script>
     
-    var vm  = new Vue({
+    let vm  = new Vue({
         el: '#app',
         data: {
             msg: '你好',
