--- a/frontdev/learn-vue/01.vue的基本代码/v-for循环数组.html
+++ b/frontdev/learn-vue/01.vue的基本代码/v-for循环数组.html
@@ -14,7 +14,7 @@
     </div>
 </body>
 <script>
-     var vm = new Vue({
+     let vm = new Vue({
         el: '#app',
         data: {
             array: ['a','b','c','d','e','f'],
