--- a/frontdev/learn-vue/01.vue的基本代码/事件修饰符.html
+++ b/frontdev/learn-vue/01.vue的基本代码/事件修饰符.html
@@ -11,7 +11,7 @@
     <div id ="app"> </div>
 </body>
 <script>
-     var vm = new Vue({
+     let vm = new Vue({
         el: '#app',
         data: {},
         methods: {}
