--- a/frontdev/learn-vue/01.vue的基本代码/简易计算器.html
+++ b/frontdev/learn-vue/01.vue的基本代码/简易计算器.html
@@ -18,7 +18,7 @@
     </div> 
 </body>
 <script>
-     var vm = new Vue({
+     let vm = new Vue({
         el: '#app',
         data: {
             result:0,
