--- a/frontdev/learn-vue/01.vue的基本代码/跑马灯.html
+++ b/frontdev/learn-vue/01.vue的基本代码/跑马灯.html
@@ -15,7 +15,7 @@
     </div>
 </body>
 <script>
-    var vm = new Vue({
+    let vm = new Vue({
         el: '#app',
         data: {
             msg: '猥琐别浪，稳住能赢~',
